<resources>
    <string name="app_name">My Application</string>
    <string name="a_user_name">Username</string>
    <string name="a_login_password">password</string>
    <string name="a_login_sign_in">SignIn</string>
    <string name="a_login_link1">Not yet registered?</string>
    <string name="a_login_link2">SignUp</string>
    <string name="a_reg_name">Name</string>
    <string name="a_reg_email">E-mail</string>
    <string name="a_reg_address">Address</string>
    <string name="a_reg_district">District</string>
    <string name="a_reg_gender">Gender</string>
    <string name="a_reg_age">Age</string>
    <string name="a_reg_submit">Submit</string>
    <string name="a_service_req">Request</string>
    <string name="a_service_days">Number of days</string>
    <string name="a_Service_price">Price</string>
    <string name="a_btn_Send">Send</string>
    <string name="a_home">Home </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_Home">Home</string>
    <string name="menu_Registration">Tools</string>
    <string name="menu_service">Service</string>
    <string name="menu_search">Search</string>


</resources>
