<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="50dp"
    android:paddingBottom="50dp">
    <ImageView
        android:id="@+id/logo_image"
        android:src="@drawable/bystander"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:text="@string/a_user_name"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:paddingLeft="50dp"
        android:paddingBottom="20dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:text="@string/a_login_password"
        android:paddingBottom="20dp"/>

    <EditText
          android:id="@+id/editText2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text"
          android:paddingLeft="50dp"
          android:paddingBottom="20dp" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="processSignupLinkClick"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/a_login_sign_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:text="@string/a_login_link1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_login_link2"/>


    </LinearLayout>


</LinearLayout>